new endpoints for uas_zones and subscriptions
