# geofencing/endpoints/reply.py
@@ -2,27 +2,27 @@
 Copyright 2019 EUROCONTROL
 ==========================================
 
-Redistribution and use in source and binary forms, with or without modification, are permitted provided that the 
+Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
 following conditions are met:
 
-1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following 
+1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following
    disclaimer.
-2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following 
+2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following
    disclaimer in the documentation and/or other materials provided with the distribution.
-3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products 
+3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products
    derived from this software without specific prior written permission.
 
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, 
-INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE 
-DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, 
-SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR 
-SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, 
-WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE 
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
+INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
 USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 ==========================================
 
-Editorial note: this license is an instance of the BSD license template as provided by the Open Source Initiative: 
+Editorial note: this license is an instance of the BSD license template as provided by the Open Source Initiative:
 http://opensource.org/licenses/BSD-3-Clause
 
 Details on EUROCONTROL: http://www.eurocontrol.int
@@ -37,7 +37,7 @@ from marshmallow import ValidationError
 from swim_backend.errors import APIError
 
 from geofencing.db.models import UASZone
-from geofencing.endpoints.schemas.reply import ReplySchema
+from geofencing.endpoints.schemas.reply_schemas import ReplySchema
 
 __author__ = "EUROCONTROL (SWIM)"
 
@@ -73,11 +73,18 @@ class Reply:
         self.generic_reply = generic_reply or GenericReply(RequestStatus.OK.value)
 
 
-class UASZoneReply(Reply):
+class UASZoneFilterReply(Reply):
 
     def __init__(self, uas_zones: List[UASZone]):
         super().__init__()
         self.uas_zones = uas_zones
+
+
+class UASZoneCreateReply(Reply):
+
+    def __init__(self, uas_zone: UASZone):
+        super().__init__()
+        self.uas_zone = uas_zone
 
 
 class SubscribeToUASZonesUpdatesReply(Reply):
@@ -92,12 +99,9 @@ def handle_response(schema):
     def decorator(func):
         @wraps(func)
         def wrapper(*args, **kwargs):
-            status_code = 200
             try:
-                result = func(*args, **kwargs)
+                result, status_code = func(*args, **kwargs)
             except Exception as e:
-                status_code = e.status if isinstance(e, APIError) else 500
-
                 result = Reply(
                     generic_reply=GenericReply(
                         request_status=RequestStatus.NOK.value,
@@ -105,6 +109,7 @@ def handle_response(schema):
                     )
                 )
 
+                status_code = e.status if isinstance(e, APIError) else 500
             return schema().dump(result), status_code
         return wrapper
     return decorator
@@ -112,7 +117,7 @@ def handle_response(schema):
 
 def handle_flask_request_error(response):
 
-    if response.status_code != 200 and 'detail' in response.json:
+    if response.status_code != 200 and response.json and 'detail' in response.json:
         reply = Reply(generic_reply=GenericReply(
             request_status=RequestStatus.NOK.value,
             request_exception_description=response.json['detail']))
