# geofencing/endpoints/uas_zones.py
@@ -2,45 +2,55 @@
 Copyright 2019 EUROCONTROL
 ==========================================
 
-Redistribution and use in source and binary forms, with or without modification, are permitted provided that the 
+Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
 following conditions are met:
 
-1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following 
+1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following
    disclaimer.
-2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following 
+2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following
    disclaimer in the documentation and/or other materials provided with the distribution.
-3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products 
+3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products
    derived from this software without specific prior written permission.
 
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, 
-INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE 
-DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, 
-SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR 
-SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, 
-WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE 
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
+INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
 USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 ==========================================
 
-Editorial note: this license is an instance of the BSD license template as provided by the Open Source Initiative: 
+Editorial note: this license is an instance of the BSD license template as provided by the Open Source Initiative:
 http://opensource.org/licenses/BSD-3-Clause
 
 Details on EUROCONTROL: http://www.eurocontrol.int
 """
+from typing import Tuple
+
 from flask import request
 from marshmallow import ValidationError
-from swim_backend.errors import BadRequestError
+from swim_backend.errors import BadRequestError, NotFoundError
 
-from geofencing.db.uas_zones import get_uas_zones as db_get_uas_zones
-from geofencing.endpoints.reply import UASZoneReply, handle_response
-from geofencing.endpoints.schemas.filters import UASZonesFilterSchema
-from geofencing.endpoints.schemas.reply import UASZonesReplySchema
+from geofencing.db.uas_zones import get_uas_zones as db_get_uas_zones, get_uas_zones_by_identifier
+from geofencing.endpoints.reply import UASZoneFilterReply, handle_response, UASZoneCreateReply, Reply, GenericReply, \
+    RequestStatus
+from geofencing.endpoints.schemas.db_schemas import UASZoneSchema
+from geofencing.endpoints.schemas.filters_schemas import UASZonesFilterSchema
+from geofencing.endpoints.schemas.reply_schemas import UASZonesFilterReplySchema, UASZoneCreateReplySchema, ReplySchema
+from geofencing.events.uas_zone_handlers import UASZoneContext
+from geofencing.events.events import create_uas_zone_event, delete_uas_zone_event
 
 __author__ = "EUROCONTROL (SWIM)"
 
 
-@handle_response(UASZonesReplySchema)
-def get_uas_zones():
+@handle_response(UASZonesFilterReplySchema)
+def get_uas_zones() -> Tuple[UASZoneFilterReply, int]:
+    """
+
+    :return:
+    """
     try:
         uas_zones_filter = UASZonesFilterSchema().load(request.get_json())
     except ValidationError as e:
@@ -48,4 +58,41 @@ def get_uas_zones():
 
     uas_zones = db_get_uas_zones(uas_zones_filter)
 
-    return UASZoneReply(uas_zones=uas_zones)
+    return UASZoneFilterReply(uas_zones=uas_zones), 200
+
+
+@handle_response(UASZoneCreateReplySchema)
+def create_uas_zone() -> Tuple[UASZoneCreateReply, int]:
+    """
+
+    :return:
+    """
+    try:
+        uas_zone = UASZoneSchema().load(request.get_json())
+    except ValidationError as e:
+        raise BadRequestError(str(e))
+
+    context = UASZoneContext(uas_zone=uas_zone)
+
+    create_uas_zone_event(context)
+
+    return UASZoneCreateReply(uas_zone=context.uas_zone), 201
+
+
+@handle_response(ReplySchema)
+def delete_uas_zone(uas_zone_identifier: str) -> Tuple[Reply, int]:
+    """
+
+    :param uas_zone_identifier:
+    :return:
+    """
+    uas_zone = get_uas_zones_by_identifier(uas_zone_identifier)
+
+    if uas_zone is None:
+        raise NotFoundError(f"UASZone with identifier '{uas_zone_identifier}' does not exist")
+
+    context = UASZoneContext(uas_zone=uas_zone)
+
+    delete_uas_zone_event(context)
+
+    return Reply(generic_reply=GenericReply(request_status=RequestStatus.OK.value)), 204
